--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,16 +18,27 @@
         <activity
             android:name=".auth.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.TP01">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".demo_intent.DemoPage1"
             android:exported="true">
+        </activity>
+        <activity
+            android:name=".demo_stateful.DemoStateful"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".demo_stateful.DemoStateful2"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".demo_mvvm.DemoViewModelActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".auth.RegisterActivity"
