--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,18 @@
             android:name=".auth.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.TP01">
+        </activity>
+        <activity
+            android:name=".demo_api.DemoAPIActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".auth.RegisterActivity"
+            >
         </activity>
         <activity
             android:name=".demo_intent.DemoPage1"
@@ -39,10 +47,6 @@
         <activity
             android:name=".demo_mvvm.DemoViewModelActivity"
             android:exported="true">
-        </activity>
-        <activity
-            android:name=".auth.RegisterActivity"
-            >
         </activity>
         <activity
             android:name=".auth.RecoverPasswordActivity"
