working navhost, navcontrollers

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".demo_nav.DemoNavActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".auth.RegisterActivity"
             >
         </activity>
